--- a/styles/style.css
+++ b/styles/style.css
@@ -1,29 +1,24 @@
-html{
-    font-size: 10px;
-    font-family: 'Open Sans', sans-serif;
-    background-color: #00539f;
-}
-body{
-    width: 600px;
+body {
+    max-width: 800px;
     margin: 0 auto;
-    background-color: #ff9500;
-    padding: 0 20px 20px 20px;
-    border: 5px solid black;
-}
+  }
+  
+.sender-column{
+    text-align: right;
+  }
+  
 h1{
-    font-size: 60px;
-    text-align: center;
-    margin: 0;
-    padding: 20px 0;
-    color: #00539f;
-    text-shadow: 3px 3px 1px black;
-}
-p, li{
-    font-size: 16px;
-    line-height: 2;
-    letter-spacing: 1px;
-}
-img{
-    display: block;
-    margin: 0 auto;
-}
+    font-size: 1.5em;
+  }
+  
+h2{
+    font-size: 1.3em;
+  }
+  
+p, ul, ol, dl, address{
+    font-size: 1.1em;
+  }
+  
+p, li, dd, dt, address{
+    line-height: 1.5;
+  }
